--- a/IntentImplicita/app/src/main/res/layout/activity_intent_implicita.xml
+++ b/IntentImplicita/app/src/main/res/layout/activity_intent_implicita.xml
@@ -7,9 +7,9 @@
     tools:context="com.example.alunos.intentimplicita.IntentImplicita">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/id"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="16dp"
         android:text="@string/web"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.223" />
 
     <EditText
-        android:id="@+id/txtWeb"
+        android:id="@+id/txtUrl"
         android:layout_width="215dp"
         android:layout_height="46dp"
         android:layout_marginEnd="8dp"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/id" />
 
     <Button
         android:id="@+id/bt"
@@ -39,12 +39,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
+        android:onClick="abrirUrl"
         android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtWeb"
+        app:layout_constraintTop_toBottomOf="@+id/txtUrl"
         app:layout_constraintVertical_bias="0.108" />
 
 </android.support.constraint.ConstraintLayout>
