--- a/PassagemDados/app/src/main/res/layout/activity_main.xml
+++ b/PassagemDados/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.197" />
 
     <EditText
-        android:id="@+id/txtNome"
+        android:id="@+id/nome"
         android:layout_width="215dp"
         android:layout_height="48dp"
         android:layout_marginBottom="110dp"
@@ -49,6 +49,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome" />
+        app:layout_constraintTop_toBottomOf="@+id/nome" />
 
 </android.support.constraint.ConstraintLayout>
