--- a/AdivinhaSalvaPlacar/app/src/main/res/layout/activity_main.xml
+++ b/AdivinhaSalvaPlacar/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,14 @@
         android:id="@+id/lblButton2"
         android:layout_width="112dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="48dp"
         android:layout_marginEnd="148dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:onClick="deNovo"
         android:text="@string/lblButton2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.574" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <TextView
         android:id="@+id/id"
@@ -40,15 +37,15 @@
         android:layout_height="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:onClick="joga"
         android:text="@string/lblButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cxeNum" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNum" />
 
     <EditText
-        android:id="@+id/cxeNum"
+        android:id="@+id/txtNum"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginEnd="84dp"
@@ -74,7 +71,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cxeNum" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNum" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="carregarRecorde"
+        android:text="@string/lblButton3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblButton2" />
 
 </android.support.constraint.ConstraintLayout>
 
