--- a/AdivinhaSalvaPlacar/app/src/main/res/layout/activity_recorde.xml
+++ b/AdivinhaSalvaPlacar/app/src/main/res/layout/activity_recorde.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.alunos.adivinhasalvaplacar.Recorde">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtPosicao1"
         android:layout_width="57dp"
         android:layout_height="16dp"
         android:layout_marginStart="8dp"
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/txtPosicao1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -36,9 +36,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/lblPosicao2"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/txtPosicao1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPosicao1" />
 
     <TextView
         android:id="@+id/txtRecorde2"
