--- a/listaSimples/app/src/main/res/layout/activity_main.xml
+++ b/listaSimples/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,9 @@
     <ListView
         android:id="@+id/list_view1"
         android:layout_width="368dp"
-        android:layout_height="456dp"
+        android:layout_height="453dp"
+        android:headerDividersEnabled="false"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="39dp" />
+        tools:layout_editor_absoluteY="42dp" />
 
 </android.support.constraint.ConstraintLayout>
